# dirtybase

./: .env.defaults  .gitignore  .gitmodules  Cargo.toml  README.md  env.example  justfile  note.txt
contract/: Cargo.toml
contract/src/: app_contract.rs  cache_contract.rs  cli_contract.rs  config_contract.rs  extension.rs  http_contract.rs  lib.rs  multitenant_contract.rs  session_contract.rs
contract/src/app_contract/: cancellation_token.rs  context.rs
contract/src/app_contract/context/: app_context.rs  context_manager.rs
contract/src/auth_contract/: access.rs  auth_user_status.rs
contract/src/auth_contract/access/: gate.rs  gate_after_middleware.rs  gate_before_middleware.rs  response.rs
contract/src/auth_contract/model/: auth_user.rs  credential.rs  parse_token.rs
contract/src/auth_contract/storage/: auth_storage_resolver.rs
contract/src/cache_contract/: storage.rs
contract/src/cli_contract/: cli_middleware_manager.rs  command_manager.rs
contract/src/config_contract/: dirtybase_config.rs
contract/src/db_contract/: migration.rs  seeder_registerer.rs
contract/src/http_contract/: axum.rs  http_bind.rs  http_context.rs  router_builder.rs  router_manager.rs  web_middleware_manager.rs
contract/src/http_contract/api/: api_response.rs
contract/src/http_contract/axum/: domain.rs
contract/src/http_contract/middlewares/: bind_middleware.rs
contract/src/lock_contract/: lock.rs  lock_manager.rs
contract/src/lock_contract/storage/: lock_memory_storage.rs  lock_storage_provider.rs  lock_storage_resolver.rs
contract/src/multitenant_contract/: request_tenant_resolver.rs  storage.rs  tenant_context.rs  tenant_manager.rs  tenant_resolved_middleware.rs
contract/src/multitenant_contract/model/: tenant.rs
contract/src/multitenant_contract/storage/: tenant_storage_provider.rs  tenant_storage_resolver.rs
contract/src/permission_contract/: model.rs  storage.rs
contract/src/permission_contract/model/: actor.rs  actor_role.rs  permission.rs  role.rs  role_permission.rs
contract/src/permission_contract/storage/: perm_storage_provider.rs  perm_storage_resolver.rs
contract/src/queue_contract/: connector.rs  manager.rs
contract/src/session_contract/: session.rs  session_data.rs  session_storage_resolver.rs
lib/app/: Cargo.toml
lib/app/config_template/: .env.defaults
lib/app/examples/basic/: main.rs
lib/app/examples/basic2/: main.rs
lib/app/src/: app.rs  cli.rs  core.rs  dirtybase_entry.rs  http.rs  lib.rs  main.rs
lib/app/src/app/: config.rs  token_claim.rs
lib/app/src/core/: command.rs  config.rs  context.rs  setup_database.rs
lib/app/src/dirtybase_entry/: commands_setup.rs  migration.rs
lib/app/src/http/: controllers.rs  middleware.rs
lib/cache/: Cargo.toml
lib/cache/src/: cache_manager.rs  config.rs  lib.rs
lib/cache/src/model/: cache_db_store.rs
lib/contract/: Cargo.toml
lib/contract/src/: app.rs  db.rs  extension.rs  http.rs  lib.rs  queue.rs  user.rs
lib/contract/src/cli/: command_manager.rs
lib/contract/src/db/: base.rs  column_value_builder.rs  config.rs  connection_bus.rs  field_values.rs  query_values.rs  relations.rs  table_entity.rs  types.rs
lib/contract/src/http/: middleware_manager.rs  router_manager.rs
lib/db/: Cargo.toml
lib/db/config_template/: .env.example  database.toml
lib/db/src/: config.rs  db.rs  db_dirtybase_entry.rs  event_handler.rs  lib.rs  pool_manager.rs  relations.rs  types.rs
lib/db/src/base/: column.rs  helper.rs  manager.rs  order_by_builder.rs  query.rs  schema.rs  table.rs
lib/db/src/connector/: mysql.rs  postgres.rs  sqlite.rs
lib/db/src/field_values/: field_value_from_type.rs  to_raw_values.rs
lib/db/src/relations/: belongs_to.rs  belongs_to_many.rs  has_many.rs  has_many_through.rs  has_one.rs  has_one_through.rs  morph_many_to_many.rs  morph_one_of_many.rs  morph_one_to_many.rs  morph_one_to_one.rs
lib/db_macro/: Cargo.toml
lib/db_macro/examples/: dto_example.rs  table.rs  work.rs
lib/db_macro/src/: attribute_type.rs  entity_repo.rs  helpers.rs  lib.rs  query_builder.rs  select_builder.rs
lib/db_macro/src/entity_repo/: repo_basic_query.rs  type_query.rs
lib/db_macro/src/relationship/: belongs_to.rs  has_many.rs
lib/db_macro/tests/: table_test.rs
lib/dirtybase_3rd_client/: Cargo.toml
lib/dirtybase_3rd_client/src/config_template/: .env.example
lib/dirtybase_3rd_client/src/sqlx/: mysql.rs
lib/dirtybase_cache/: Cargo.toml
lib/dirtybase_cache/examples/: redis_store.rs
lib/dirtybase_cache/src/: cache_manager.rs  config.rs  lib.rs  model.rs
lib/dirtybase_cache/src/cache_manager/: cache_entry.rs  cache_store.rs
lib/dirtybase_cache/src/config_template/: .env.example
lib/dirtybase_cache/src/model/: cache_db_store.rs
lib/dirtybase_contract/: Cargo.toml  README.md
lib/dirtybase_contract/src/: db.rs  extension.rs  lib.rs
lib/dirtybase_contract/src/app/: command.rs
lib/dirtybase_contract/src/db/: base.rs
lib/dirtybase_contract/src/http/: router_manager.rs
lib/dirtybase_db/: .env_example  Cargo.toml
lib/dirtybase_db/config_template/: .env.example
lib/dirtybase_db/src/: base.rs  column_value_builder.rs  config.rs  driver.rs  event.rs  field_values.rs  lib.rs  query_values.rs  types.rs
lib/dirtybase_db/src/base/: base_entity.rs  column.rs  column_value_builder.rs  connection.rs  field_values.rs  helper.rs  index.rs  insert_values.rs  join_builder.rs  manager.rs  query.rs  query_conditions.rs  query_join_types.rs  query_operators.rs  query_values.rs  save_values.rs  schema.rs  table.rs  types.rs  user_table.rs  where_join_operators.rs
lib/dirtybase_db/src/config_template/: .env_example  database.toml
lib/dirtybase_db/src/driver/: mysql.rs  (+1 more)
lib/dirtybase_db_macro/: Cargo.toml
lib/dirtybase_db_macro/examples/: dto_example.rs  table.rs  work.rs
lib/dirtybase_db_macro/src/: attribute_type.rs  entity_repo.rs  helpers.rs  lib.rs  query_builder.rs  select_builder.rs
lib/dirtybase_db_macro/tests/: table_test.rs
lib/dirtybase_queue/: Cargo.toml
lib/dirtybase_queue/src/: manager.rs
lib/helper/: Cargo.toml
lib/helper/src/: string.rs
(+269 files in other folders)
