[workspace]
resolver = "2"
members = ["bin/ui", "bin/cli", "packages/*", "private_packages/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.metadata.publish]
order = [
	"dirtybase_contract",
	"dirtybase_helper",
	"dirtybase_encrypt",
	"dirtybase_db",
	"dirtybase_db_macro",
]

[workspace.dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
aes-gcm = { version = "0.10.3" }
crypto = { version = "0.5.1", features = ["aead", "password-hash", "digest"] }
argon2 = { version = "*" }
dashmap = { version = "6" }
anyhow = { version = "1.0" }
clap = { version = "4", features = ["derive", "unstable-doc"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1", features = ["raw_value"] }
toml = "0.8"
sqlx = { version = "0.8", features = [
	"runtime-tokio",
	"tls-rustls",
	"all-databases",
	"chrono",
	"json",
	"macros",
	"uuid",
	"time",
] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
pretty_env_logger = "0.5"
log = "0.4"
bcrypt = "0.17"
rand = "0.9"
futures = "0.3"
futures-util = "0.3"
ulid = { version = "1.0", features = ["serde", "rand", "std"] }
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
futures-channel = "0.3"
native-tls = "0.2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["full"] }
hmac = "0.12"
mime = "0.3"
jwt = "0.16"
jsonwebtoken = "9"
sha2 = "0.10"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }
dotenvy = "0.15"
# busybody = { version = "1" }
busybody = { path = "../busybody" }
orsomafo = { version = "0.5" }
fama = { version = "0.4" }
busstop = { version = "0.2" }
redis = { version = "0.32", features = [
	"tokio-comp",
	"aio",
	# "tls-native-tls",
	"cluster-async",
] }
lettre = { version = "0.11" }
config = "0.15"
deadpool = "0.12"
deadpool-redis = { version = "0.21" }
cron = { version = "0.15" }
english-to-cron = { version = "0.1" }
validator = { version = "0.20", features = ["derive"] }
tower-service = { version = "0.3" }
named_routes_axum = { version = "0.2" }
simple-middleware = { version = "0.2" }
cruet = { version = "*" }
axum-extra = { version = "0.10", features = [
	"form",
	"cookie",
	"cookie-private",
	"cookie-signed",
	"attachment",
	"query",
	"protobuf",
	"typed-header",
	"async-read-body",
	"multipart",
	"file-stream",
] }
mime_guess = { version = "2.0" }
tower-http = { version = "0.6", features = ["full"] }
hex = { version = "0.4" }
base64 = "0.22.1"
base64ct = { version = "1.7", features = ["std"] }
utoipa = { version = "5", features = ["axum"] }
utoipa-axum = { version = "0.2" }
uuid = { version = "1", features = [
	"v4",
	"v7",
	"serde",
	"fast-rng",
	"macro-diagnostics",
] }
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = { version = "3" }
uuid25 = { version = "0.3", features = ["gen", "serde", "uuid"] }
snowflaker = { version = "0.3", features = ["dynamic"] }
ipnet = { version = "2" }
cookie = { version = "0.18" }
tera = { version = "1" }
