[workspace]
resolver = "2"
members = ["bin/ui", "bin/cli", "packages/*", "examples/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.metadata.publish]
order = [
	"dirtybase_contract",
	"dirtybase_helper",
	"dirtybase_encrypt",
	"dirtybase_db",
	"dirtybase_db_macro",
	"dirtybase_lock",
	"dirtybase_cache",
]

[workspace.dependencies]
axum = { version = "0.8.4", features = ["ws", "multipart"] }
aes-gcm = { version = "0.10.3" }
crypto = { version = "0.5.1", features = ["aead", "password-hash", "digest"] }
argon2 = { version = "0.5.3" }
dashmap = { version = "6.1.0" }
anyhow = { version = "1.0.99" }
clap = { version = "4.5.47", features = ["derive", "unstable-doc"] }
dotenv = { version = "0.15.0" }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
toml = { version = "0.9.7" }
sqlx = { version = "0.8.6", features = [
	"runtime-tokio",
	"tls-rustls",
	"all-databases",
	"chrono",
	"json",
	"macros",
	"uuid",
	"time",
] }
chrono = { version = "0.4.42", features = ["serde"] }
async-trait = { version = "0.1.89" }
pretty_env_logger = { version = "0.5.0" }
log = { version = "0.4.28" }
bcrypt = { version = "0.17.1" }
rand = { version = "0.9.2" }
futures = { version = "0.3.31" }
futures-util = { version = "0.3.31" }
ulid = { version = "1.2.1", features = ["serde", "rand", "std"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
futures-channel = { version = "0.3.31" }
native-tls = { version = "0.2.14" }
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = { version = "0.7.16", features = ["full"] }
hmac = { version = "0.12.1" }
mime = { version = "0.3.17" }
jwt = { version = "0.16.0" }
jsonwebtoken = { version = "10.0.0", features = ["rust_crypto"] }
sha2 = { version = "0.10.9" }
quote = { version = "1.0.41" }
syn = { version = "2.0.106", features = ["extra-traits"] }
dotenvy = { version = "0.15.7" }
busybody = { version = "1.0.10" }
orsomafo = { version = "0.5.0" }
fama = { version = "0.4.6" }
busstop = { version = "0.2.7" }
redis = { version = "0.32.5", features = [
	"tokio-comp",
	"aio",
	# "tls-native-tls",
	"cluster-async",
] }
lettre = { version = "0.11" }
config = "0.15.16"
deadpool = "0.12.3"
deadpool-redis = { version = "0.22.0" }
cron = { version = "0.15.0" }
english-to-cron = { version = "0.1.6" }
validator = { version = "0.20.0", features = ["derive"] }
tower-service = { version = "0.3.3" }
named_routes_axum = { version = "0.2.5" }
simple-middleware = { path = "../simple-middleware" }
cruet = { version = "*" }
axum-extra = { version = "0.10.3", features = [
	"form",
	"cookie",
	"cookie-private",
	"cookie-signed",
	"attachment",
	"query",
	"protobuf",
	"typed-header",
	"async-read-body",
	"multipart",
	"file-stream",
] }
mime_guess = { version = "2.0.5" }
tower-http = { version = "0.6.6", features = ["full"] }
hex = { version = "0.4.3" }
base64 = "0.22.1"
base64ct = { version = "1.8.0", features = ["std"] }
utoipa = { version = "5.4.0", features = ["default", "axum_extras"] }
utoipa-axum = { version = "0.2.0" }
uuid = { version = "1.18.1", features = [
	"v4",
	"v7",
	"serde",
	"fast-rng",
	"macro-diagnostics",
] }
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tempfile = { version = "3.22.0" }
uuid25 = { version = "0.3.5", features = ["gen", "serde", "uuid"] }
snowflaker = { version = "0.3.6", features = ["dynamic"] }
ipnet = { version = "2.11.0" }
cookie = { version = "0.18.1" }
tera = { version = "1.20.0" }
reqwest = { version = "0.12.22", features = ["json"] }
serde_urlencoded = { version = "0.7.1" }
