[workspace]
resolver = "3"
members = ["bin/ui", "bin/cli", "contract", "packages/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.metadata.publish]
order = [
	"dirtybase_common",
	"dirtybase_contract",
	"dirtybase_helper",
	"dirtybase_encrypt",
	"dirtybase_3rd_client",
	"dirtybase_db",
	"dirtybase_db_macro",
	"dirtybase_lock",
	"dirtybase_cache",
	"dirtybase_permission",
	"dirtybase_multitenant",
	"dirtybase_realtime",
]

[patch.crates-io]
dirtybase_3rd_client = { path = "./packages/3rd_client" }
dirtybase_app = { path = "./packages/app" }
dirtybase_auth = { path = "./packages/auth" }
dirtybase_cache = { path = "./packages/cache" }
dirtybase_common = { path = "./packages/common" }
dirtybase_contract = { path = "./contract" }
dirtybase_cron = { path = "./packages/cron" }
dirtybase_db = { path = "./packages/db" }
dirtybase_db_macro = { path = "./packages/db_macro" }
dirtybase_encrypt = { path = "./packages/encrypt" }
dirtybase_helper = { path = "./packages/helper" }
dirtybase_lock = { path = "./packages/lock" }
dirtybase_mail = { path = "./packages/mail" }
dirtybase_multitenant = { path = "./packages/multitenant" }
dirtybase_permission = { path = "./packages/permission" }
dirtybase_queue = { path = "./packages/queue" }
dirtybase_realtime = { path = "./packages/realtime" }
dirtybase_session = { path = "./packages/session" }


[workspace.dependencies]
dirtybase_app = { version = "*" }
dirtybase_contract = { version = "*" }
dirtybase_auth = { version = "*" }
dirtybase_cache = { version = "*" }
dirtybase_common = { version = "*" }
dirtybase_cron = { version = "*" }
dirtybase_db = { version = "*" }
dirtybase_db_macro = { version = "*" }
dirtybase_encrypt = { version = "*" }
dirtybase_helper = { version = "*" }
dirtybase_lock = { version = "*" }
dirtybase_mail = { version = "*" }
dirtybase_multitenant = { version = "*" }
dirtybase_permission = { version = "*" }
dirtybase_queue = { version = "*" }
dirtybase_session = { version = "*" }
dirtybase_realtime = { version = "*" }
dirtybase_3rd_client = { version = "*" }

axum = { version = "0.8.4", features = ["ws", "multipart"] }
aes-gcm = { version = "0.10.3" }
crypto = { version = "0.5.1", features = ["aead", "password-hash", "digest"] }
argon2 = { version = "0.5.3" }
dashmap = { version = "6.1.0" }
anyhow = { version = "1.0.99" }
clap = { version = "4.5.55", features = ["derive", "unstable-doc"] }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
toml = { version = "0.9.8" }
sqlx = { version = "0.8.6", features = [
	"runtime-tokio",
	"tls-rustls",
	"all-databases",
	"chrono",
	"json",
	"macros",
	"uuid",
	"time",
] }
chrono = { version = "0.4.43", features = ["serde"] }
async-trait = { version = "0.1.89" }
pretty_env_logger = { version = "0.5.0" }
log = { version = "0.4.29" }
bcrypt = { version = "0.18.0" }
rand = { version = "0.9.2" }
futures = { version = "0.3.31" }
futures-util = { version = "0.3.31" }
ulid = { version = "1.2.1", features = ["serde", "rand", "std"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
futures-channel = { version = "0.3.31" }
native-tls = { version = "0.2.14" }
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-util = { version = "0.7.18", features = ["full"] }
hmac = { version = "0.12.1" }
mime = { version = "0.3.17" }
jwt = { version = "0.16.0" }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
sha2 = { version = "0.10.9" }
quote = { version = "1.0.44" }
syn = { version = "2.0.114", features = ["extra-traits"] }
dotenvy = { version = "0.15.7" }
busybody = { version = "1.0.11" }
orsomafo = { version = "0.5.0" }
fama = { version = "0.4.6" }
busstop = { version = "0.2.7" }
redis = { version = "1.0.2", features = [
	"tokio-comp",
	"aio",
	# "tls-native-tls",
	"cluster-async",
] }
lettre = { version = "0.11" }
config = "0.15.18"
deadpool = "0.12.3"
deadpool-redis = { version = "0.22.1" }
cron = { version = "0.15.0" }
english-to-cron = { version = "0.1.6" }
validator = { version = "0.20.0", features = ["derive"] }
tower-service = { version = "0.3.3" }
named_routes_axum = { version = "0.2.5" }
simple-middleware = { version = "0.3.0" }
cruet = { version = "*" }
axum-extra = { version = "0.12.1", features = [
	"form",
	"cookie",
	"cookie-private",
	"cookie-signed",
	"attachment",
	"query",
	"protobuf",
	"typed-header",
	"async-read-body",
	"multipart",
	"file-stream",
] }
mime_guess = { version = "2.0.5" }
tower-http = { version = "0.6.6", features = ["full"] }
hex = { version = "0.4.3" }
base64 = "0.22.1"
base64ct = { version = "1.8.3", features = ["std"] }
utoipa = { version = "5.4.0", features = ["default", "axum_extras"] }
utoipa-axum = { version = "0.2.0" }
uuid = { version = "1.20.0", features = [
	"v4",
	"v7",
	"serde",
	"fast-rng",
	"macro-diagnostics",
] }
tracing = { version = "0.1.41", features = ["std"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tempfile = { version = "3.22.0" }
uuid25 = { version = "0.3.5", features = ["gen", "serde", "uuid"] }
snowflaker = { version = "0.3.6", features = ["dynamic"] }
ipnet = { version = "2.11.0" }
cookie = { version = "0.18.1" }
tera = { version = "1.20.1" }
reqwest = { version = "0.13.1", features = [
	"json",
	"form",
	"multipart",
	"query",
	"stream",
] }
serde_urlencoded = { version = "0.7.1" }
