[package]
name = "dirtybase_contract"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirtybase_helper = { workspace = true }
dirtybase_db_macro = { workspace = true }
dirtybase_common = { workspace = true }
clap = { workspace = true, features = ["unstable-doc"] }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
orsomafo = { workspace = true }
validator = { workspace = true }
busstop = { workspace = true }
busybody = { workspace = true }
fama = { workspace = true }
ulid = { workspace = true }
simple-middleware = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
crypto = { workspace = true }
argon2 = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["full"] }
axum = { workspace = true }
axum-extra = { workspace = true }
named_routes_axum = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
cruet = { workspace = true }
jwt = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
base64ct = { workspace = true }
ipnet = { workspace = true }
cookie = { workspace = true }
