[package]
name = "dirtybase_app"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirtybase_db = { path = "../db" }
dirtybase_config = { path = "../config" }
dirtybase_cache = { path = "../cache" }
dirtybase_mail = { path = "../mail" }
dirtybase_contract = { path = "../contract" }
dirtybase_helper = { path = "../helper" }
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
pretty_env_logger = { workspace = true }
log = { workspace = true }
# actix-files = { workspace = true }
bcrypt = { workspace = true }
rand = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
hmac = { workspace = true }
jwt = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true, features = ["full"] }
busybody = { workspace = true }
orsomafo = { workspace = true }
fama = { workspace = true }
redis = { workspace = true }
mime = { workspace = true }
axum = { workspace = true }
busstop = { workspace = true }
tower-service = { workspace = true }
named_routes_axum = { workspace = true }
