[package]
name = "dirtybase_db"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirtybase_config = { path = "../config" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
ulid = { workspace = true }
orsomafo = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true }
busybody = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
futures-channel = { workspace = true }
