[package]
name = "dirtybase_cache"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
busybody = { workspace = true }
dirtybase_db = { path = "../dirtybase_db" }
dirtybase_db_types = { path = "../dirtybase_db_types" }
dirtybase_config = { path = "../dirtybase_config" }
dirtybase_helper = { path = "../dirtybase_helper" }
dirtybase_3rd_client = { path = "../dirtybase_3rd_client" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
redis = { workspace = true }

[dev-dependencies]
