[package]
name = "dirtybase_contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirtybase_db_types = { path = "../dirtybase_db_types" }
dirtybase_config = { path = "../dirtybase_config" }
dirtybase_db_macro = { path = "../dirtybase_db_macro" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
orsomafo = { workspace = true }
busstop = { workspace = true }
busybody = { workspace = true }
ulid = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
bcrypt = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tokio-stream = { workspace = true }
