[package]
name = "dirtybase_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
futures = "0.3.26"
futures-util = "0.3.26"
sqlx = { version = "0.6.2", features = [
  "runtime-tokio-rustls",
  "mysql",
  "sqlite",
  "any",
  "chrono",
  "json",
] }
ulid = { version = "1.0.0", features = ["serde", "rand", "std"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
log = "0.4.17"
surrealdb = { version = "1.0.0-beta.9" }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
futures-channel = "0.3.28"
native-tls = "0.2.11"
tokio = { version = "1.27.0", features = ["sync"] }
