[package]
name = "dirtybase_db"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirtybase_db_internal = { path = "../dirtybase_db_internal" }
dirtybase_db_macro = { path = "../dirtybase_db_macro" }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
sqlx = { workspace = true }
ulid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
surrealdb = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-channel = { workspace = true }
native-tls = { workspace = true }
tokio = { workspace = true }
bcrypt = { workspace = true }
chrono = { workspace = true }
