[package]
name = "dirtybase_db_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
dirtybase_db_internal = { path = "../dirtybase_db_internal" }
quote = { workspace = true }
syn = { workspace = true }
