[package]
name = "dirtybase_db_macro"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
dirtybase_db_types = { path = "../dirtybase_db_types" }
busybody = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
sqlx = { workspace = true }
proc-macro2 = { version = "1.0.62", default-features = false }
anyhow = { workspace = true }
