[package]
name = "dirtybase_queue"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirtybase_contract = { path = "../dirtybase_contract" }
tokio = { workspace = true }
log = { workspace = true }
